--- a/lslidar_driver/package.xml
+++ b/lslidar_driver/package.xml
@@ -1,6 +1,6 @@
 <package>
 
-  <name>lslidar_driver</name>
+  <name>lslidar_ls180s2_driver</name>
   <version>1.0.0</version>
   <description>
     ROS device driver for Leishen ls lidar.
@@ -14,7 +14,7 @@
   <build_depend>diagnostic_updater</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>lslidar_msgs</build_depend>
+  <build_depend>lslidar_ls180s2_msgs</build_depend>
 
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl_conversions</build_depend>
@@ -24,7 +24,7 @@
   <run_depend>diagnostic_updater</run_depend>
   <run_depend>nodelet</run_depend>
   <run_depend>roscpp</run_depend>
-  <run_depend>lslidar_msgs</run_depend>
+  <run_depend>lslidar_ls180s2_msgs</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>pcl_conversions</run_depend>
   <run_depend>libpcl-all-dev</run_depend>
