--- a/lslidar_msgs/package.xml
+++ b/lslidar_msgs/package.xml
@@ -1,6 +1,6 @@
 <package>
 
-  <name>lslidar_msgs</name>
+  <name>lslidar_ls180s2_msgs</name>
   <version>1.0.0</version>
   <description>
     ROS message definitions for Leishen ls LIDARs.
