--- a/lslidar_driver/package.xml
+++ b/lslidar_driver/package.xml
@@ -1,6 +1,6 @@
 <package>
 
-  <name>lslidar_driver</name>
+  <name>lslidar_ch64w_driver</name>
   <version>1.2.4</version>
   <description>
     ROS device driver for Leishen Ch lidar.
@@ -13,7 +13,7 @@
 
   <build_depend>nodelet</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>lslidar_msgs</build_depend>
+  <build_depend>lslidar_ch64w_msgs</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
@@ -25,7 +25,7 @@
 
   <run_depend>nodelet</run_depend>
   <run_depend>roscpp</run_depend>
-  <run_depend>lslidar_msgs</run_depend>
+  <run_depend>lslidar_ch64w_msgs</run_depend>
   <run_depend>pluginlib</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>pcl_ros</run_depend>
